force-app/main/default/objects/Job__c/Job__c.object-meta.xml
<CustomObject>
    <description>Job defines the body of work to be performed at a Location and all of the dates related to the Job performance. A Job is related to a Project, Project Service, Project Location, Job Material, Contact, Exception, and Job Attempt.</description>
    <label>Job</label>
    <nameField>
        <displayFormat>JOB-{000000000}</displayFormat>
        <label>Job ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Jobs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>