force-app/main/default/objects/Job__c/fields/AccountableExecutionCompany__c.field-meta.xml
<CustomField>
    <fullName>AccountableExecutionCompany__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The field that indicates the Execution Company accountable for this Job.</description>
    <inlineHelpText>The execution company accountable for the job</inlineHelpText>
    <label>Accountable Execution Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Jobs (Accountable For Execution Company)</relationshipLabel>
    <relationshipName>Jobs_AccountableForExecutionCompany</relationshipName>
    <type>Lookup</type>
</CustomField>