force-app/main/default/objects/Job__c/fields/ActiveJobAttempt__c.field-meta.xml
<CustomField>
    <fullName>ActiveJobAttempt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The field that displays Job Attempts</description>
    <label>Active Job Attempt</label>
    <referenceTo>JobAttempt__c</referenceTo>
    <relationshipLabel>Jobs</relationshipLabel>
    <relationshipName>Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>