force-app/main/default/objects/Job__c/fields/ActiveJobAttemptTimeReported__c.field-meta.xml
<CustomField>
    <fullName>ActiveJobAttemptTimeReported__c</fullName>
    <description>The field that indicates the minutes reported for the Job.</description>
    <formula>ActiveJobAttempt__r.TimeReported__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Reported (Minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>