force-app/main/default/objects/Job__c/fields/ArchiveStatus__c.field-meta.xml
<CustomField>
    <fullName>ArchiveStatus__c</fullName>
    <description>The field that indicates the Archive Status of the Job.</description>
    <inlineHelpText>The archive status of the job</inlineHelpText>
    <label>Archive Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Archived</fullName>
            </value>
            <value>
                <fullName>Queued</fullName>
            </value>
            <value>
                <fullName>Archived</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>