force-app/main/default/objects/Job__c/fields/AssignedContactFirstName__c.field-meta.xml
<CustomField>
    <fullName>AssignedContactFirstName__c</fullName>
    <description>The field that indicates the first name of the Assigned Contact.</description>
    <formula>ActiveJobAttempt__r.AssignedContactFirstName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned Contact First Name</label>
    <type>Text</type>
</CustomField>