force-app/main/default/objects/Job__c/fields/AssignedContactHomeLatitude__c.field-meta.xml
<CustomField>
    <fullName>AssignedContactHomeLatitude__c</fullName>
    <description>The field that indicates the home latitude of the Assigned Contact.</description>
    <formula>ActiveJobAttempt__r.AssignedContactHomeLatitude__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The home latitude of the assigned contact</inlineHelpText>
    <label>Assigned Contact Home Latitude</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>