force-app/main/default/objects/Job__c/fields/AssignedContactHomeLongitude__c.field-meta.xml
<CustomField>
    <fullName>AssignedContactHomeLongitude__c</fullName>
    <description>The field that indicates the home longitude of the Assigned Contact.</description>
    <formula>ActiveJobAttempt__r.AssignedContactHomeLongitude__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The home longitude of the assigned contact</inlineHelpText>
    <label>Assigned Contact Home Longitude</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>