force-app/main/default/objects/Job__c/fields/AssignedContactId__c.field-meta.xml
<CustomField>
    <fullName>AssignedContactId__c</fullName>
    <description>The field that indicates the ID number of the Assigned Contact.</description>
    <formula>ActiveJobAttempt__r.AssignedContactId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The ID number of the assigned contact</inlineHelpText>
    <label>Assigned Contact ID</label>
    <type>Text</type>
</CustomField>