force-app/main/default/objects/Job__c/fields/AssignedContactLastName__c.field-meta.xml
<CustomField>
    <fullName>AssignedContactLastName__c</fullName>
    <description>The field that indicates the Last name of the Assigned Contact.</description>
    <formula>ActiveJobAttempt__r.AssignedContactLastName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned Contact Last Name</label>
    <type>Text</type>
</CustomField>