force-app/main/default/objects/Job__c/fields/AssignedContactPhone__c.field-meta.xml
<CustomField>
    <fullName>AssignedContactPhone__c</fullName>
    <description>The field for the phone number of the Assigned Contact.</description>
    <formula>ActiveJobAttempt__r.AssignedContactPhone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The phone number of the assigned contact</inlineHelpText>
    <label>Assigned Contact Phone</label>
    <type>Text</type>
</CustomField>