force-app/main/default/objects/Job__c/fields/AssignedContactTitle__c.field-meta.xml
<CustomField>
    <fullName>AssignedContactTitle__c</fullName>
    <description>The field that indicates the Title of the Assigned Contact.</description>
    <formula>ActiveJobAttempt__r.AssignedContactTitle__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The title of the assigned contact</inlineHelpText>
    <label>Assigned Contact Title</label>
    <type>Text</type>
</CustomField>