force-app/main/default/objects/Job__c/fields/AssignedEmployeeId__c.field-meta.xml
<CustomField>
    <fullName>AssignedEmployeeId__c</fullName>
    <description>The field that indicates the ID of the employee assigned to the Job.</description>
    <formula>ActiveJobAttempt__r.AssignedEmployeeId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The ID number of the employee assigned to the job</inlineHelpText>
    <label>Assigned Employee Id</label>
    <type>Text</type>
</CustomField>