force-app/main/default/objects/Job__c/fields/AttemptMaxLastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>AttemptMaxLastModifiedDate__c</fullName>
    <label>Attempt Max Last Modified Date</label>
    <summarizedField>JobAttempt__c.LastModifiedDate</summarizedField>
    <summaryFilterItems>
        <field>JobAttempt__c.IsActive__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>JobAttempt__c.Job__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>