force-app/main/default/objects/Job__c/fields/CompletionStatus__c.field-meta.xml
<CustomField>
    <fullName>CompletionStatus__c</fullName>
    <description>A picklist that indicates if a Job was completed.</description>
    <inlineHelpText>Whether or not the job was completed</inlineHelpText>
    <label>Completion Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Not Completed</fullName>
                <default>true</default>
                <label>Not Completed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>