force-app/main/default/objects/Job__c/fields/Consignment__c.field-meta.xml
<CustomField>
    <fullName>Consignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consignment</label>
    <referenceTo>Job__c</referenceTo>
    <relationshipLabel>Jobs (Consignment)</relationshipLabel>
    <relationshipName>Jobs1</relationshipName>
    <type>Lookup</type>
</CustomField>