force-app/main/default/objects/Job__c/fields/CreateAttempt__c.field-meta.xml
<CustomField>
    <fullName>CreateAttempt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Attempt</label>
    <type>Checkbox</type>
</CustomField>