force-app/main/default/objects/Job__c/fields/CreateAttemptException__c.field-meta.xml
<CustomField>
    <fullName>CreateAttemptException__c</fullName>
    <label>Create Attempt Exception</label>
    <length>255</length>
    <type>Text</type>
</CustomField>