force-app/main/default/objects/Job__c/fields/DayNumber__c.field-meta.xml
<CustomField>
    <fullName>DayNumber__c</fullName>
    <label>Day Number</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>