force-app/main/default/objects/Job__c/fields/EndDateCalculated__c.field-meta.xml
<CustomField>
    <fullName>EndDateCalculated__c</fullName>
    <formula>IF (UPPER(ProjectScheduleOptionCode__c) == &#39;EC&#39;,ProjectEndDate__c,IF (ISBLANK(JobScheduledDate__c),ProjectEndDate__c,JobScheduledDate__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Date (Job)</label>
    <type>Date</type>
</CustomField>