force-app/main/default/objects/Job__c/fields/EndTime__c.field-meta.xml
<CustomField>
    <fullName>EndTime__c</fullName>
    <formula>JobEndTime__c</formula>
    <label>End Time</label>
    <type>Text</type>
</CustomField>