force-app/main/default/objects/Job__c/fields/EstimatedMinutes__c.field-meta.xml
<CustomField>
    <fullName>EstimatedMinutes__c</fullName>
    <description>The field that indicates the estimated minutes for the Job.</description>
    <formula>IF(ISBLANK(EstimatedMinutesOverride__c), ProjectService__r.EstimatedMinutes__c, EstimatedMinutesOverride__c)</formula>
    <label>Time Estimate (Minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>