force-app/main/default/objects/Job__c/fields/EstimatedMinutesOverride__c.field-meta.xml
<CustomField>
    <fullName>EstimatedMinutesOverride__c</fullName>
    <label>Estimated Minutes Override</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>