force-app/main/default/objects/Job__c/fields/ExceptionCode__c.field-meta.xml
<CustomField>
    <fullName>ExceptionCode__c</fullName>
    <description>The field that indicates the code of the exception.</description>
    <formula>ActiveJobAttempt__r.ExceptionCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The code of the exception</inlineHelpText>
    <label>Exception Code</label>
    <type>Text</type>
</CustomField>