force-app/main/default/objects/Job__c/fields/ExceptionComments__c.field-meta.xml
<CustomField>
    <fullName>ExceptionComments__c</fullName>
    <label>Exception Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>