force-app/main/default/objects/Job__c/fields/ExceptionName__c.field-meta.xml
<CustomField>
    <fullName>ExceptionName__c</fullName>
    <formula>ActiveJobAttempt__r.ExceptionName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exception Name</label>
    <type>Text</type>
</CustomField>