force-app/main/default/objects/Job__c/fields/FailedQC__c.field-meta.xml
<CustomField>
    <fullName>FailedQC__c</fullName>
    <description>The checkbox that indicates that the Job failed QC.</description>
    <formula>ActiveJobAttempt__r.FailedQC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If selected, the job failed QC.</inlineHelpText>
    <label>Failed QC</label>
    <type>Checkbox</type>
</CustomField>