force-app/main/default/objects/Job__c/fields/FulfillmentCenter__c.field-meta.xml
<CustomField>
    <fullName>FulfillmentCenter__c</fullName>
    <description>The field that indicates the name of the Fulfillment Center that will provide materials for the Job.</description>
    <formula>ProjectService__r.FulfillmentCenterName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The fulfillment center that will provide materials for the Job.</inlineHelpText>
    <label>Fulfillment Center</label>
    <type>Text</type>
</CustomField>