force-app/main/default/objects/Job__c/fields/GPSVerified__c.field-meta.xml
<CustomField>
    <fullName>GPSVerified__c</fullName>
    <description>To verify if Job the is reported at the requested location as per compliance</description>
    <formula>DISTANCE(Location__r.GeoLocation__c, ActiveJobAttempt__r.ExceptionReportedGeoLocation__c, &#39;mi&#39;)&lt;$Setup.ExceptionQuestionGPSSettings__c.RadiusThreshold__c</formula>
    <inlineHelpText>Job Reported Location</inlineHelpText>
    <label>GPSVerified</label>
    <type>Checkbox</type>
</CustomField>