force-app/main/default/objects/Job__c/fields/HasException__c.field-meta.xml
<CustomField>
    <fullName>HasException__c</fullName>
    <description>The checkbox that indicates if a Job has an exception.</description>
    <formula>ActiveJobAttempt__r.ExceptionCode__c != null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If selected, the job has an exception.</inlineHelpText>
    <label>Exception</label>
    <type>Checkbox</type>
</CustomField>