force-app/main/default/objects/Job__c/fields/HasFulfillment__c.field-meta.xml
<CustomField>
    <fullName>HasFulfillment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The checkbox that indicates whether or not a Job has fulfillment.</description>
    <inlineHelpText>If selected, the job has fulfillment.</inlineHelpText>
    <label>Fulfillment</label>
    <type>Checkbox</type>
</CustomField>