force-app/main/default/objects/Job__c/fields/HelpTimeMinutesCalculated__c.field-meta.xml
<CustomField>
    <fullName>HelpTimeMinutesCalculated__c</fullName>
    <label>HelpTime Minutes Calculated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>