force-app/main/default/objects/Job__c/fields/IsAttemptable__c.field-meta.xml
<CustomField>
    <fullName>IsAttemptable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be set as TRUE if &#39;create attempts&#39; is allowed</description>
    <inlineHelpText>This field will be set as TRUE if &#39;create attempts&#39; is allowed</inlineHelpText>
    <label>Is Attemptable</label>
    <type>Checkbox</type>
</CustomField>