force-app/main/default/objects/Job__c/fields/IsCancellable__c.field-meta.xml
<CustomField>
    <fullName>IsCancellable__c</fullName>
    <description>The checkbox that indicates if this Job can be canceled.</description>
    <formula>OR 
(

JobCancelOverride__c == true, 

AND(

	AND(LOWER(ProjectStatus__c) != &#39;planning&#39;, LOWER(ProjectStatus__c) != &#39;closed&#39;, LOWER(ProjectStatus__c) != &#39;pending&#39;), 
	LOWER(TEXT(JobStatus__c)) != &#39;canceled&#39;, 
	LOWER(TEXT(JobStatus__c)) != &#39;closed&#39;, 

(DATETIMEVALUE(NULLVALUE(JobScheduledDate__c, JobStartDate__c)) - NOW() - 
													((NULLVALUE(JobCancelLeadTime__c,0) - 5)/24)) &gt; 0

))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Job can be canceled if Project Status = Booked, Launched or In Progress and Job is within Cancel Lead Time.</inlineHelpText>
    <label>Cancelable</label>
    <type>Checkbox</type>
</CustomField>