force-app/main/default/objects/Job__c/fields/IsCompletedonDate__c.field-meta.xml
<CustomField>
    <fullName>IsCompletedonDate__c</fullName>
    <description>The checkbox that indicates if the Job was completed on date.</description>
    <formula>Text(CompletionStatus__c) = &quot;Completed&quot; &amp;&amp; JobCompletedDate__c== JobCommittedDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If selected, the job was completed on date.</inlineHelpText>
    <label>Completed on Date</label>
    <type>Checkbox</type>
</CustomField>