force-app/main/default/objects/Job__c/fields/IsExecuted__c.field-meta.xml
<CustomField>
    <fullName>IsExecuted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The checkbox that indicates if a Job has been executed.</description>
    <inlineHelpText>If selected, the job has been executed.</inlineHelpText>
    <label>Executed</label>
    <type>Checkbox</type>
</CustomField>