force-app/main/default/objects/Job__c/fields/IsExecutedinWindow__c.field-meta.xml
<CustomField>
    <fullName>IsExecutedinWindow__c</fullName>
    <description>The checkbox that indicates if the job was executed between Project Start Date and Project End Date.</description>
    <formula>AND((JobExecutedDate__c&gt;=OriginalProjectStartDate__c),(JobExecutedDate__c&lt;=Project__r.LaunchedProjectEndDate__c))&amp;&amp; IsExecuted__c=True</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If selected, the job was executed between Project Start Date and Project End Date.</inlineHelpText>
    <label>Executed in Window</label>
    <type>Checkbox</type>
</CustomField>