force-app/main/default/objects/Job__c/fields/IsExecutedOnDate__c.field-meta.xml
<CustomField>
    <fullName>IsExecutedOnDate__c</fullName>
    <description>The checkbox that indicates whether or not the Job was executed on date.</description>
    <formula>IsExecuted__c = True &amp;&amp; JobExecutedDate__c== JobCommittedDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If selected,the job was executed on date.</inlineHelpText>
    <label>Executed On Date</label>
    <type>Checkbox</type>
</CustomField>