force-app/main/default/objects/Job__c/fields/IsRescheduled__c.field-meta.xml
<CustomField>
    <fullName>IsRescheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The checkbox that indicates that the Job is rescheduled.</description>
    <inlineHelpText>If selected, the job is rescheduled.</inlineHelpText>
    <label>Rescheduled</label>
    <type>Checkbox</type>
</CustomField>