force-app/main/default/objects/Job__c/fields/IsScheduled__c.field-meta.xml
<CustomField>
    <fullName>IsScheduled__c</fullName>
    <description>The checkbox that indicates if the Job is scheduled.</description>
    <formula>IF(ISNULL(ActiveJobAttempt__r.AttemptScheduleDate__c), false, true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If selected, the job is scheduled.</inlineHelpText>
    <label>Scheduled</label>
    <type>Checkbox</type>
</CustomField>