force-app/main/default/objects/Job__c/fields/IsShift__c.field-meta.xml
<CustomField>
    <fullName>IsShift__c</fullName>
    <formula>UPPER(TEXT(Service__r.Specialization__c)) == &#39;SHIFT&#39;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Shift</label>
    <type>Checkbox</type>
</CustomField>