force-app/main/default/objects/Job__c/fields/IsTask__c.field-meta.xml
<CustomField>
    <fullName>IsTask__c</fullName>
    <formula>UPPER(TEXT(Service__r.Specialization__c)) == &#39;TASK&#39;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Task</label>
    <type>Checkbox</type>
</CustomField>