force-app/main/default/objects/Job__c/fields/IsVisibleToClient__c.field-meta.xml
<CustomField>
    <fullName>IsVisibleToClient__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The checkbox that indicates whether or not information is visible to the client.</description>
    <inlineHelpText>If selected, this information is visible to the client.</inlineHelpText>
    <label>Visible To Client</label>
    <type>Checkbox</type>
</CustomField>