force-app/main/default/objects/Job__c/fields/JobAttemptedDate__c.field-meta.xml
<CustomField>
    <fullName>JobAttemptedDate__c</fullName>
    <description>The field that indicates the last attempt date of the Job.</description>
    <formula>ActiveJobAttempt__r.AttemptedDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Attempt Date</label>
    <type>Date</type>
</CustomField>