force-app/main/default/objects/Job__c/fields/JobCanceledComments__c.field-meta.xml
<CustomField>
    <fullName>JobCanceledComments__c</fullName>
    <description>The entry field for comments if a job is canceled.</description>
    <inlineHelpText>Explains why the job was canceled.</inlineHelpText>
    <label>Canceled Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>