force-app/main/default/objects/Job__c/fields/JobCanceledReason__c.field-meta.xml
<CustomField>
    <fullName>JobCanceledReason__c</fullName>
    <description>A picklist that indicates reasons why a job was canceled.</description>
    <inlineHelpText>The reason that the job was canceled.</inlineHelpText>
    <label>Canceled Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Supplier Requested</fullName>
            </value>
            <value>
                <fullName>Retailer Requested</fullName>
            </value>
            <value>
                <fullName>No Product</fullName>
            </value>
            <value>
                <fullName>Item not approved</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>