force-app/main/default/objects/Job__c/fields/JobCancelLeadTime__c.field-meta.xml
<CustomField>
    <fullName>JobCancelLeadTime__c</fullName>
    <description>This field indicates the lead time required to cancel a Job.</description>
    <formula>Project__r.JobCancelLeadTime__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The lead time for a canceled job</inlineHelpText>
    <label>Cancel Lead Time (hrs)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>