force-app/main/default/objects/Job__c/fields/JobCancelOverride__c.field-meta.xml
<CustomField>
    <fullName>JobCancelOverride__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The checkbox that indicates whether the cancellation of a Job is overridden.</description>
    <inlineHelpText>If selected, the cancellation of this job is overridden.</inlineHelpText>
    <label>Cancel Override</label>
    <type>Checkbox</type>
</CustomField>