force-app/main/default/objects/Job__c/fields/JobCloseDate__c.field-meta.xml
<CustomField>
    <fullName>JobCloseDate__c</fullName>
    <description>The field that indicates the date that the Job closed.</description>
    <formula>Project__r.EndDate__c +  JobGracePeriod__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Close Date</label>
    <type>Date</type>
</CustomField>