force-app/main/default/objects/Job__c/fields/JobCommittedDate__c.field-meta.xml
<CustomField>
    <fullName>JobCommittedDate__c</fullName>
    <description>The field that indicates the date that a Job committed.</description>
    <inlineHelpText>The date the job was committed</inlineHelpText>
    <label>Committed Date</label>
    <type>Date</type>
</CustomField>