force-app/main/default/objects/Job__c/fields/JobCompletedDate__c.field-meta.xml
<CustomField>
    <fullName>JobCompletedDate__c</fullName>
    <description>The field that indicates the date the Job was completed.</description>
    <inlineHelpText>The date the job was completed</inlineHelpText>
    <label>Completed Date</label>
    <type>Date</type>
</CustomField>