force-app/main/default/objects/Job__c/fields/JobDateAssigned__c.field-meta.xml
<CustomField>
    <fullName>JobDateAssigned__c</fullName>
    <description>The field that indicates the date and time a Job was last assigned.	.</description>
    <inlineHelpText>The date and time the job was last assigned</inlineHelpText>
    <label>Date Assigned</label>
    <type>DateTime</type>
</CustomField>