force-app/main/default/objects/Job__c/fields/JobDateCanceled__c.field-meta.xml
<CustomField>
    <fullName>JobDateCanceled__c</fullName>
    <description>The field that indicates the date and time a Job was canceled.</description>
    <inlineHelpText>The date and time the job was canceled</inlineHelpText>
    <label>Date Canceled</label>
    <type>DateTime</type>
</CustomField>