force-app/main/default/objects/Job__c/fields/JobDateClosed__c.field-meta.xml
<CustomField>
    <fullName>JobDateClosed__c</fullName>
    <description>The field that indicates the date and time a Job was closed.</description>
    <inlineHelpText>The date and time the job was closed</inlineHelpText>
    <label>Date Closed</label>
    <type>DateTime</type>
</CustomField>