force-app/main/default/objects/Job__c/fields/JobDateOpened__c.field-meta.xml
<CustomField>
    <fullName>JobDateOpened__c</fullName>
    <description>The field that Indicates the date and time a Job was opened.</description>
    <inlineHelpText>The date and time the job was opened</inlineHelpText>
    <label>Date Opened</label>
    <type>DateTime</type>
</CustomField>