force-app/main/default/objects/Job__c/fields/JobDateOriginallyAssigned__c.field-meta.xml
<CustomField>
    <fullName>JobDateOriginallyAssigned__c</fullName>
    <description>The field that indicates the date and time a Job was originally assigned.</description>
    <inlineHelpText>The date and time the job was originally assigned</inlineHelpText>
    <label>Date Originally Assigned</label>
    <type>DateTime</type>
</CustomField>