force-app/main/default/objects/Job__c/fields/JobDateOriginallyReported__c.field-meta.xml
<CustomField>
    <fullName>JobDateOriginallyReported__c</fullName>
    <description>The field that indicates the date and time a Job was originally reported.</description>
    <inlineHelpText>The date and time the job was originally reported</inlineHelpText>
    <label>Date Originally Reported</label>
    <type>DateTime</type>
</CustomField>