force-app/main/default/objects/Job__c/fields/JobDateReported__c.field-meta.xml
<CustomField>
    <fullName>JobDateReported__c</fullName>
    <description>The field that indicates the date and time a Job was last reported.</description>
    <formula>ActiveJobAttempt__r.DateReported__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The date and time the job was last reported</inlineHelpText>
    <label>Job Date Reported</label>
    <type>DateTime</type>
</CustomField>