force-app/main/default/objects/Job__c/fields/JobDateStarted__c.field-meta.xml
<CustomField>
    <fullName>JobDateStarted__c</fullName>
    <description>The field that indicates the date and time a Job started.</description>
    <inlineHelpText>The date and time the job started</inlineHelpText>
    <label>Date Started</label>
    <type>DateTime</type>
</CustomField>