force-app/main/default/objects/Job__c/fields/JobEndDate__c.field-meta.xml
<CustomField>
    <fullName>JobEndDate__c</fullName>
    <description>The field that indicates the end date of the Job.</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>