force-app/main/default/objects/Job__c/fields/JobEndTime__c.field-meta.xml
<CustomField>
    <fullName>JobEndTime__c</fullName>
    <description>The field that indicates the local end time of the Job.</description>
    <label>End Time (Local)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>