force-app/main/default/objects/Job__c/fields/JobExecutedDate__c.field-meta.xml
<CustomField>
    <fullName>JobExecutedDate__c</fullName>
    <description>The field that indicates the date a Job was executed.</description>
    <inlineHelpText>The date the job was executed</inlineHelpText>
    <label>Executed Date</label>
    <type>Date</type>
</CustomField>