force-app/main/default/objects/Job__c/fields/JobFirstAttemptDate__c.field-meta.xml
<CustomField>
    <fullName>JobFirstAttemptDate__c</fullName>
    <description>The field that indicates the first attempt date of the Job.</description>
    <label>First Attempt Date</label>
    <type>Date</type>
</CustomField>