force-app/main/default/objects/Job__c/fields/JobGracePeriod__c.field-meta.xml
<CustomField>
    <fullName>JobGracePeriod__c</fullName>
    <description>The field that indicates the Grace Period of a Job in days.</description>
    <formula>Project__r.ProjectGracePeriodDuration__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The grace period of the job</inlineHelpText>
    <label>Grace Period (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>