force-app/main/default/objects/Job__c/fields/JobLaunchDate__c.field-meta.xml
<CustomField>
    <fullName>JobLaunchDate__c</fullName>
    <description>The field that indicates the date when jobs are made available to the Execution Company.</description>
    <formula>Project__r.ProjectLaunchDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The date when jobs are made available to the Execution Company.</inlineHelpText>
    <label>Launch Date</label>
    <type>Date</type>
</CustomField>