force-app/main/default/objects/Job__c/fields/JobManualLink__c.field-meta.xml
<CustomField>
    <fullName>JobManualLink__c</fullName>
    <description>View Job Manual</description>
    <formula>IF(JobManualUrl__c!=&#39;&#39;, HYPERLINK(JobManualUrl__c , &#39;View Job Manual&#39;), &#39;No Manual&#39;)</formula>
    <label>Job Manual Link</label>
    <type>Text</type>
</CustomField>