force-app/main/default/objects/Job__c/fields/JobManualUrl__c.field-meta.xml
<CustomField>
    <fullName>JobManualUrl__c</fullName>
    <description>The field that displays the link to the Job manual.</description>
    <formula>ProjectService__r.JobManualURL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Manual Url</label>
    <type>Text</type>
</CustomField>