force-app/main/default/objects/Job__c/fields/JobScheduledDate__c.field-meta.xml
<CustomField>
    <fullName>JobScheduledDate__c</fullName>
    <description>The field that indicates the date a Job is scheduled.</description>
    <inlineHelpText>The date the job was scheduled</inlineHelpText>
    <label>Scheduled Date</label>
    <type>Date</type>
</CustomField>