force-app/main/default/objects/Job__c/fields/JobStartDate__c.field-meta.xml
<CustomField>
    <fullName>JobStartDate__c</fullName>
    <description>The field that indicates the start date for the Job.</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>