force-app/main/default/objects/Job__c/fields/JobStartTime__c.field-meta.xml
<CustomField>
    <fullName>JobStartTime__c</fullName>
    <description>The field that indicates the local start time for the Job.</description>
    <label>Start Time (Local)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>