force-app/main/default/objects/Job__c/fields/JobStatus__c.field-meta.xml
<CustomField>
    <fullName>JobStatus__c</fullName>
    <description>A picklist that indicates the status of the Job.</description>
    <inlineHelpText>The status of the job</inlineHelpText>
    <label>Job Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>Started</fullName>
            </value>
            <value>
                <fullName>Reported</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>