force-app/main/default/objects/Job__c/fields/JobStatusPrevious__c.field-meta.xml
<CustomField>
    <fullName>JobStatusPrevious__c</fullName>
    <description>This keeps track of the previous status of the job.</description>
    <inlineHelpText>This keeps track of the previous status of the job.</inlineHelpText>
    <label>Previous Job Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>