force-app/main/default/objects/Job__c/fields/JobUTCEndTime__c.field-meta.xml
<CustomField>
    <fullName>JobUTCEndTime__c</fullName>
    <description>The field that indicates the UTC end time of the Job.</description>
    <label>End Time (UTC)</label>
    <type>DateTime</type>
</CustomField>