force-app/main/default/objects/Job__c/fields/JobUTCStartTime__c.field-meta.xml
<CustomField>
    <fullName>JobUTCStartTime__c</fullName>
    <description>The field that indicates the UTC start time of the Job.</description>
    <label>Start Time (UTC)</label>
    <type>DateTime</type>
</CustomField>